# Parallel-AES-Algorithm-using-CUDA

./: .gitignore  AES.cu  AES.h  CMakeLists.txt  README.md  novel.txt  test_crypto.cpp
